--- a/demo.html
+++ b/demo.html
@@ -170,30 +170,24 @@
     
     <script>
 
-        $('.mdui-card-content')[0].style.height=document.documentElement.clientHeight-250+'px';
-        $('.mdui-card-content')[1].style.height=document.documentElement.clientHeight-198+'px';
+        resize_div();
 
-        $('#tab4-content')[0].style.height=document.documentElement.clientHeight-293+'px';
-        $('#tab5-content')[0].style.height=document.documentElement.clientHeight-293+'px';
-        $('#tab6-content')[0].style.height=document.documentElement.clientHeight-293+'px';
+        function resize_div() {
+            $('.mdui-card-content')[0].style.height = document.documentElement.clientHeight - 250 + 'px';
+            $('.mdui-card-content')[1].style.height = document.documentElement.clientHeight - 198 + 'px';
+
+            $('#tab4-content')[0].style.height = document.documentElement.clientHeight - 293 + 'px';
+            $('#tab5-content')[0].style.height = document.documentElement.clientHeight - 293 + 'px';
+            $('#tab6-content')[0].style.height = document.documentElement.clientHeight - 293 + 'px';
 
 
-        $('#tab2-content')[0].style.height=document.documentElement.clientHeight-230+'px';
-        $('#tab3-content>.frameset')[0].style.height=document.documentElement.clientHeight-230+'px';
-        
+            $('#tab2-content')[0].style.height = document.documentElement.clientHeight - 230 + 'px';
+            $('#tab3-content>.frameset')[0].style.height = document.documentElement.clientHeight - 230 + 'px';
+        }
 
-        $(window).resize(function() {
-            $('.mdui-card-content')[0].style.height=document.documentElement.clientHeight-250+'px';
-            $('.mdui-card-content')[1].style.height=document.documentElement.clientHeight-198+'px';
-
-            $('#tab4-content')[0].style.height=document.documentElement.clientHeight-293+'px';
-            $('#tab5-content')[0].style.height=document.documentElement.clientHeight-293+'px';
-            $('#tab6-content')[0].style.height=document.documentElement.clientHeight-293+'px';
-
-            $('#tab2-content')[0].style.height=document.documentElement.clientHeight-230+'px';
-            $('#tab3-content>.frameset')[0].style.height=document.documentElement.clientHeight-230+'px';
+        $(window).resize(function () {
+            resize_div();
         });
-
     </script>
 
     <script type="text/javascript" src='js/star-frameset.js'></script>
