--- a/demo.html
+++ b/demo.html
@@ -9,23 +9,13 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <title>示例</title>
-    <link rel="stylesheet" href="css/mdui.min.css?v=f8d5474f78cc30e0322af9d29242f241" />
-    <!--<link rel="stylesheet" href="http://www.mdui.org/demo/assets/css/demo.css"/>-->
+    <link rel="stylesheet" href="assets/css/mdui.min.css?v=f8d5474f78cc30e0322af9d29242f241" />
 
     <link rel="stylesheet" href="plugin/ztree/css/coloRideStyle/coloRideStyle.css" type="text/css">
-    <link rel="stylesheet" href="plugin/font-awesome/css/font-awesome.min.css">
+    <style type="text/css">
+  
+    </style>
 
-	<style type="text/css">
-.ztree li span.button.pIcon01_ico_open{margin-right:2px; background: url(../../../css/zTreeStyle/img/diy/1_open.png) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle}
-.ztree li span.button.pIcon01_ico_close{margin-right:2px; background: url(../../../css/zTreeStyle/img/diy/1_close.png) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle}
-.ztree li span.button.pIcon02_ico_open, .ztree li span.button.pIcon02_ico_close{margin-right:2px; background: url(../../../css/zTreeStyle/img/diy/2.png) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle}
-.ztree li span.button.icon01_ico_docu{margin-right:2px; background: url(../../../css/zTreeStyle/img/diy/3.png) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle}
-.ztree li span.button.icon02_ico_docu{margin-right:2px; background: url(../../../css/zTreeStyle/img/diy/4.png) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle}
-.ztree li span.button.icon03_ico_docu{margin-right:2px; background: url(../../../css/zTreeStyle/img/diy/5.png) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle}
-.ztree li span.button.icon04_ico_docu{margin-right:2px; background: url(../../../css/zTreeStyle/img/diy/6.png) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle}
-.ztree li span.button.icon05_ico_docu{margin-right:2px; background: url(../../../css/zTreeStyle/img/diy/7.png) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle}
-.ztree li span.button.icon06_ico_docu{margin-right:2px; background: url(../../../css/zTreeStyle/img/diy/8.png) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle}
-	</style>
 </head>
 
 <body class="mdui-appbar-with-toolbar">
@@ -166,93 +156,22 @@
 
     </div>
 
-    <script src="js/mdui.min.js?v=852260c4c4e92d7a7c8e009e78e3e1eb"></script>
+    <script src="assets/js/mdui.min.js?v=852260c4c4e92d7a7c8e009e78e3e1eb"></script>
     <script src="http://qunarzz.com/jquery/prd/jquery-1.7.2.js"></script>
 
-    <script>
-        resize_div();
 
-        function resize_div() {
-            $('.mdui-card-content')[0].style.height = document.documentElement.clientHeight - 250 + 'px';
-            $('.mdui-card-content')[1].style.height = document.documentElement.clientHeight - 198 + 'px';
-
-            $('#tab4-content')[0].style.height = document.documentElement.clientHeight - 293 + 'px';
-            $('#tab5-content')[0].style.height = document.documentElement.clientHeight - 293 + 'px';
-            $('#tab6-content')[0].style.height = document.documentElement.clientHeight - 293 + 'px';
-
-
-            $('#tab2-content')[0].style.height = document.documentElement.clientHeight - 200 + 'px';
-            $('#tab3-content>.frameset')[0].style.height = document.documentElement.clientHeight - 195 + 'px';
-        }
-
-        $(window).resize(function () {
-            resize_div();
-        });
-    </script>
-
+    <!--动态设置页面div高度，然后分屏，顺序不能倒-->
+    <script type="text/javascript" src="assets/js/page.js"></script>
     <script type="text/javascript" src='plugin/frameset/star-frameset.js'></script>
 
 
+    <!--引入ztree之后，渲染左侧书结构-->
     <script type="text/javascript" src="plugin/ztree/js/jquery.ztree.core.js"></script>
     <script type="text/javascript" src="plugin/ztree/js/jquery.ztree.excheck.js"></script>
+    <script type="text/javascript" src="assets/js/tree.js"></script>
 
 
 
-    <SCRIPT type="text/javascript">
-        var setting = {
-            check: {
-                enable: true,
-                nocheckInherit: true
-            },
-            data: {
-                simpleData: {
-                    enable: true
-                }
-            }
-        };
-
-        var zNodes = [
-            { id: 1, pId: 0, name: "随意勾选 1", open: true, iconSkin:"mdui-color-blue pIcon01" },
-            { id: 11, pId: 1, name: "随意勾选 1-1", open: true },
-            { id: 111, pId: 11, name: "无 checkbox 1-1-1", nocheck: true },
-            { id: 112, pId: 11, name: "随意勾选 1-1-2" },
-            { id: 12, pId: 1, name: "无 checkbox 1-2", nocheck: true, open: true },
-            { id: 121, pId: 12, name: "无 checkbox 1-2-1" },
-            { id: 122, pId: 12, name: "无 checkbox 1-2-2" },
-            { id: 2, pId: 0, name: "随意勾选 2", checked: true, open: true },
-            { id: 21, pId: 2, name: "随意勾选 2-1" },
-            { id: 22, pId: 2, name: "随意勾选 2-2", open: true },
-            { id: 221, pId: 22, name: "随意勾选 2-2-1", checked: true },
-            { id: 222, pId: 22, name: "随意勾选 2-2-2" },
-            { id: 23, pId: 2, name: "随意勾选 2-3" },
-            { id: 3, pId: 0, name: "随意勾选 2", checked: true, open: true },
-            { id: 31, pId: 3, name: "随意勾选 2-1" },
-            { id: 32, pId: 3, name: "随意勾选 2-2", open: true },
-            { id: 321, pId: 32, name: "随意勾选 2-2-1", checked: true },
-            { id: 322, pId: 32, name: "随意勾选 2-2-2" },
-            { id: 33, pId: 3, name: "随意勾选 2-3" }
-        ];
-
-        function nocheckNode(e) {
-            var zTree = $.fn.zTree.getZTreeObj("treeDemo"),
-                nocheck = e.data.nocheck,
-                nodes = zTree.getSelectedNodes();
-            if (nodes.length == 0) {
-                alert("请先选择一个节点");
-            }
-
-            for (var i = 0, l = nodes.length; i < l; i++) {
-                nodes[i].nocheck = nocheck;
-                zTree.updateNode(nodes[i]);
-            }
-        }
-
-        $(document).ready(function () {
-            $.fn.zTree.init($("#treeDemo"), setting, zNodes);
-            $("#nocheckTrue").bind("click", { nocheck: true }, nocheckNode);
-            $("#nocheckFalse").bind("click", { nocheck: false }, nocheckNode);
-        });
-    </SCRIPT>
 
 </body>
 
