优化 显示不下树形结构时候出现滚动条

--- a/demo.html
+++ b/demo.html
@@ -53,7 +53,7 @@
                         <!-- 卡片的内容 -->
                         <div class="mdui-card-content">
 
-                            <div id="treeDemo" class="ztree"></div>
+                            <div id="treeDemo" class="ztree" style="overflow: auto;"></div>
 
                         </div>
 
