--- a/demo.html
+++ b/demo.html
@@ -12,9 +12,8 @@
     <link rel="stylesheet" href="assets/css/mdui.min.css?v=f8d5474f78cc30e0322af9d29242f241" />
 
     <link rel="stylesheet" href="plugin/ztree/css/coloRideStyle/coloRideStyle.css" type="text/css">
-    <style type="text/css">
-  
-    </style>
+
+    <link rel="stylesheet" href="plugin/handsontable/handsontable.full.css" type="text/css">
 
 </head>
 
@@ -97,9 +96,9 @@
 
                             <div class="mdui-col-xs-12">
 
-                                <div id="tab1-content" class="mdui-p-a-2" style="border: solid 1px red;">
+                                <div id="tab1-content" class="mdui-p-a-2" style="border: solid 0px red;">
 
-                                    <div id="tab4-content" class="mdui-p-a-2" style="border: solid 1px red;">安安生生</div>
+                                    <div id="tab4-content" class="mdui-p-a-0" style="overflow: auto;"><div id="example"></div></div>
                                     <div id="tab5-content" class="mdui-p-a-2">shopping content</div>
                                     <div id="tab6-content" class="mdui-p-a-2">images content</div>
 
@@ -171,6 +170,9 @@
     <script type="text/javascript" src="assets/js/tree.js"></script>
 
 
+    <script type="text/javascript" src="plugin/handsontable/handsontable.full.js"></script>
+
+    <script type="text/javascript" src="assets/js/table.js"></script>
 
 
 </body>
