修复加载页面时候，会看到页面闪动

--- a/demo.html
+++ b/demo.html
@@ -32,7 +32,7 @@
             </div>
         </header>
 
-        <div class='frameset' rows="100%">
+        <div class='frameset' rows="100%" id="maindiv" style="visibility:hidden">
             <div class='frameset' cols="400,*">
                 <!--<div>-->
                 <div class="mdui-row">
