新增树形结构的右击菜单

--- a/demo.html
+++ b/demo.html
@@ -52,7 +52,7 @@
                         <!-- 卡片的内容 -->
                         <div class="mdui-card-content">
 
-                            <div id="treeDemo" class="ztree" style="overflow: auto;"></div>
+                            <div id="treeDemo" class="ztree mdui-drawer-scrollbar" style="overflow: auto;"></div>
 
                         </div>
 
@@ -98,7 +98,9 @@
 
                                 <div id="tab1-content" class="mdui-p-a-2" style="border: solid 0px red;">
 
-                                    <div id="tab4-content" class="mdui-p-a-0" style="overflow: auto;"><div id="example"></div></div>
+                                    <div id="tab4-content" class="mdui-p-a-0" style="overflow: auto;">
+                                        <div id="example"></div>
+                                    </div>
                                     <div id="tab5-content" class="mdui-p-a-2">shopping content</div>
                                     <div id="tab6-content" class="mdui-p-a-2">images content</div>
 
@@ -150,6 +152,26 @@
             </div>
             <!--</div>-->
         </div>
+
+        <ul class="mdui-menu" id="menu">
+            <li class="mdui-menu-item">
+                <a href="javascript:;" class="mdui-ripple">Refresh</a>
+            </li>
+            <li class="mdui-menu-item">
+                <a href="javascript:;" class="mdui-ripple">Settings</a>
+            </li>
+            <li class="mdui-menu-item">
+                <a href="javascript:;" class="mdui-ripple">Send feedback</a>
+            </li>
+            <li class="mdui-divider"></li>
+            <li class="mdui-menu-item">
+                <a href="javascript:;" class="mdui-ripple">Help</a>
+            </li>
+            <li class="mdui-menu-item">
+                <a href="javascript:;" class="mdui-ripple">Signout</a>
+            </li>
+        </ul>
+
     </div>
 
 
