新增 目录/suite/case 三种右击菜单

--- a/demo.html
+++ b/demo.html
@@ -153,25 +153,57 @@
             <!--</div>-->
         </div>
 
-        <ul class="mdui-menu" id="menu">
+        <!--右击菜单-->
+        <ul class="mdui-menu" id="menu_directory">
             <li class="mdui-menu-item">
-                <a href="javascript:;" class="mdui-ripple">Refresh</a>
+                <a href="javascript:;" class="mdui-ripple">New Suite</a>
             </li>
             <li class="mdui-menu-item">
-                <a href="javascript:;" class="mdui-ripple">Settings</a>
+                <a href="javascript:;" class="mdui-ripple">New Directory</a>
             </li>
             <li class="mdui-menu-item">
-                <a href="javascript:;" class="mdui-ripple">Send feedback</a>
+                <a href="javascript:;" class="mdui-ripple">New Resource</a>
             </li>
             <li class="mdui-divider"></li>
             <li class="mdui-menu-item">
-                <a href="javascript:;" class="mdui-ripple">Help</a>
-            </li>
-            <li class="mdui-menu-item">
-                <a href="javascript:;" class="mdui-ripple">Signout</a>
+                <a href="javascript:;" class="mdui-ripple">Delete</a>
             </li>
         </ul>
 
+        <ul class="mdui-menu" id="menu_suite">
+            <li class="mdui-menu-item">
+                <a href="javascript:;" class="mdui-ripple">New Test Case</a>
+            </li>
+            <li class="mdui-menu-item">
+                <a href="javascript:;" class="mdui-ripple">New User Keyword</a>
+            </li>
+            <li class="mdui-divider"></li>
+            <li class="mdui-menu-item">
+                <a href="javascript:;" class="mdui-ripple">Rename</a>
+            </li>
+            <li class="mdui-menu-item">
+                <a href="javascript:;" class="mdui-ripple">Delete</a>
+            </li>
+        </ul>
+
+        <ul class="mdui-menu" id="menu_case">
+            <li class="mdui-menu-item">
+                <a href="javascript:;" class="mdui-ripple">Copy</a>
+            </li>
+            <li class="mdui-menu-item">
+                <a href="javascript:;" class="mdui-ripple">Move Up</a>
+            </li>
+            <li class="mdui-menu-item">
+                <a href="javascript:;" class="mdui-ripple">Move Down</a>
+            </li>
+            <li class="mdui-divider"></li>
+            <li class="mdui-menu-item">
+                <a href="javascript:;" class="mdui-ripple">Rename</a>
+            </li>
+            <li class="mdui-menu-item">
+                <a href="javascript:;" class="mdui-ripple">Delete</a>
+            </li>
+        </ul>
     </div>
 
 
