新增 case的上下移动功能

--- a/demo.html
+++ b/demo.html
@@ -191,10 +191,10 @@
                 <a href="javascript:;" class="mdui-ripple">Copy</a>
             </li>
             <li class="mdui-menu-item">
-                <a href="javascript:;" class="mdui-ripple">Move Up</a>
+                <a href="javascript:;" class="mdui-ripple" onclick="moveUp()">Move Up</a>
             </li>
             <li class="mdui-menu-item">
-                <a href="javascript:;" class="mdui-ripple">Move Down</a>
+                <a href="javascript:;" class="mdui-ripple" onclick="moveDown()">Move Down</a>
             </li>
             <li class="mdui-divider"></li>
             <li class="mdui-menu-item">
