--- a/demo.html
+++ b/demo.html
@@ -166,7 +166,7 @@
             </li>
             <li class="mdui-divider"></li>
             <li class="mdui-menu-item">
-                <a href="javascript:;" class="mdui-ripple">Delete</a>
+                <a href="javascript:;" class="mdui-ripple" onclick="remove()">Delete</a>
             </li>
         </ul>
 
@@ -182,7 +182,7 @@
                 <a href="javascript:;" class="mdui-ripple">Rename</a>
             </li>
             <li class="mdui-menu-item">
-                <a href="javascript:;" class="mdui-ripple">Delete</a>
+                <a href="javascript:;" class="mdui-ripple" onclick="remove()">Delete</a>
             </li>
         </ul>
 
@@ -201,7 +201,7 @@
                 <a href="javascript:;" class="mdui-ripple" onclick="rename()">Rename</a>
             </li>
             <li class="mdui-menu-item">
-                <a href="javascript:;" class="mdui-ripple">Delete</a>
+                <a href="javascript:;" class="mdui-ripple" onclick="remove()">Delete</a>
             </li>
         </ul>
     </div>
