新增 复制节点功能

--- a/demo.html
+++ b/demo.html
@@ -188,7 +188,7 @@
 
         <ul class="mdui-menu" id="menu_case">
             <li class="mdui-menu-item">
-                <a href="javascript:;" class="mdui-ripple">Copy</a>
+                <a href="javascript:;" class="mdui-ripple" onclick="copyNode()">Copy</a>
             </li>
             <li class="mdui-menu-item">
                 <a href="javascript:;" class="mdui-ripple" onclick="moveUp()">Move Up</a>
