新增 快捷键功能

--- a/demo.html
+++ b/demo.html
@@ -226,10 +226,16 @@
     <script type="text/javascript" src="assets/js/tree.js"></script>
 
 
-    <script type="text/javascript" src="plugin/handsontable/handsontable.full.js"></script>
 
+
+    <!--引入表格-->
+    <script type="text/javascript" src="plugin/handsontable/handsontable.full.js"></script>
     <script type="text/javascript" src="assets/js/table.js"></script>
 
+
+    <!--引入快捷键-->
+    <script type="text/javascript" src="plugin/keymaster/keymaster.js"></script>
+    <script type="text/javascript" src="assets/js/shortcuts.js"></script>
 
 </body>
 
