新增 suite级别的settings页面

--- a/demo.html
+++ b/demo.html
@@ -101,13 +101,15 @@
                                     <div id="tab4-content" class="mdui-p-a-0" style="overflow: auto;">
                                         <div id="example"></div>
                                     </div>
-                                    <div id="tab5-content" class="mdui-p-a-2">shopping content</div>
-                                    <div id="tab6-content" class="mdui-p-a-2">images content</div>
+                                    <div id="tab5-content" class="mdui-p-a-0" style="overflow: auto;">
+                                        <div id="suite_settings_table"></div>
+                                    </div>
+                                    <div id="tab6-content" class="mdui-p-a-2">shopping content</div>
 
                                     <div class="mdui-tab " mdui-tab id="tab">
                                         <a href="#tab4-content" id="tab4" class="mdui-ripple">Table Edit</a>
-                                        <a href="#tab5-content" id="tab5" class="mdui-ripple">Text Edit</a>
-                                        <a href="#tab6-content" id="tab6" class="mdui-ripple">Run</a>
+                                        <a href="#tab5-content" id="tab5" class="mdui-ripple">Settings</a>
+                                        <a href="#tab6-content" id="tab6" class="mdui-ripple">Library&Variable&Metadata</a>
                                     </div>
 
 
@@ -231,6 +233,7 @@
     <!--引入表格-->
     <script type="text/javascript" src="plugin/handsontable/handsontable.full.js"></script>
     <script type="text/javascript" src="assets/js/table.js"></script>
+    <script type="text/javascript" src="assets/js/suite_settings_table.js"></script>
 
 
     <!--引入快捷键-->
