新增读取文件夹目录，格式化成ztree数据

--- a/app/main.html
+++ b/app/main.html
@@ -15,11 +15,11 @@
 
     <link rel="stylesheet" href="plugin/handsontable/handsontable.full.css" type="text/css">
     <script>
-    // 重命名 Electron 提供的 require
-    window.nodeRequire = require;
-    delete window.require;
-    delete window.exports;
-    delete window.module;
+        // 重命名 Electron 提供的 require
+        window.nodeRequire = require;
+        delete window.require;
+        delete window.exports;
+        delete window.module;
     </script>
 </head>
 
@@ -307,13 +307,17 @@
     <script type="text/javascript" src="assets/js/suite_library_table.js"></script>
     <script type="text/javascript" src="assets/js/suite_variable_table.js"></script>
     <script type="text/javascript" src="assets/js/suite_metadata_table.js"></script>
-    
-    
+
+
 
 
     <!--引入快捷键-->
     <script type="text/javascript" src="plugin/keymaster/keymaster.js"></script>
     <script type="text/javascript" src="assets/js/shortcuts.js"></script>
+
+
+    <script type="text/javascript" src="assets/js/worktree.js"></script>
+
 
 </body>
 
