--- a/app/main.html
+++ b/app/main.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="no-siteapp" />
-    <title>示例</title>
+    <title>RFEditor</title>
     <link rel="stylesheet" href="assets/css/mdui.min.css?v=f8d5474f78cc30e0322af9d29242f241" />
 
     <link rel="stylesheet" href="plugin/ztree/css/coloRideStyle/coloRideStyle.css" type="text/css">
@@ -29,8 +29,11 @@
 
         <header class="mdui-appbar mdui-appbar-fixed">
             <div class="mdui-toolbar mdui-color-blue" style="height: 50px">
-                <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">&#xe5d2;</i></a>
-                <span class="mdui-typo-title">ColorRide</span>
+                <span class="mdui-typo-title">RFEditor</span>
+                <a href="javascript:;" class="mdui-btn mdui-btn-icon" onclick="openDirectory()"><i class="mdui-icon material-icons">folder_open</i></a>
+                <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">save</i></a>
+                <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">play_circle_outline</i></a>
+                <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">remove_circle_outline</i></a>
                 <div class="mdui-toolbar-spacer"></div>
                 <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">&#xe8b6;</i></a>
                 <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">&#xe5d5;</i></a>
@@ -317,6 +320,7 @@
 
 
     <script type="text/javascript" src="assets/js/worktree.js"></script>
+    <script type="text/javascript" src="assets/js/toolbar.js"></script>
 
 
 </body>
