--- a/app/main.html
+++ b/app/main.html
@@ -109,24 +109,21 @@
                                 <div id="tab1-content" class="mdui-p-a-2" style="border: solid 0px red;">
 
                                     <div id="tab4-content" class="mdui-p-a-0" style="overflow: hidden;">
-
                                         <div id="example"></div>
                                     </div>
                                     <div id="tab5-content" class="mdui-p-a-0" style="overflow: hidden;">
-                                        <div id="suite_settings_table"></div>
+                                        <div id="suite_settings_table" ></div>
+
                                     </div>
-                                    <div id="tab6-content" class="mdui-p-a-0 mdui-drawer-scrollbar" style="overflow: auto;">
-                                        <div id="suite_library_table" style="height:208px;overflow: auto;"></div>
-                                        <br>
-                                        <div id="suite_variable_table" style="height:208px;overflow: auto;"></div>
-                                        <br>
-                                        <div id="suite_metadata_table" style="height:208px;overflow: auto;"></div>
+                                    <div id="tab6-content" class="mdui-p-a-0 mdui-drawer-scrollbar" style="overflow: hidden;">
+                                        <div id="suite_variable_table"></div>
+
                                     </div>
 
                                     <div class="mdui-tab " mdui-tab id="tab">
                                         <a href="#tab4-content" id="tab4" class="mdui-ripple">Table Edit</a>
                                         <a href="#tab5-content" id="tab5" class="mdui-ripple">Settings</a>
-                                        <a href="#tab6-content" id="tab6" class="mdui-ripple">Library&Variable&Metadata</a>
+                                        <a href="#tab6-content" id="tab6" class="mdui-ripple">Variables</a>
                                     </div>
 
 
@@ -308,9 +305,9 @@
     <script type="text/javascript" src="plugin/handsontable/handsontable.full.js"></script>
     <script type="text/javascript" src="assets/js/table.js"></script>
     <script type="text/javascript" src="assets/js/suite_settings_table.js"></script>
-    <script type="text/javascript" src="assets/js/suite_library_table.js"></script>
+    <!--<script type="text/javascript" src="assets/js/suite_library_table.js"></script>-->
     <script type="text/javascript" src="assets/js/suite_variable_table.js"></script>
-    <script type="text/javascript" src="assets/js/suite_metadata_table.js"></script>
+    <!--<script type="text/javascript" src="assets/js/suite_metadata_table.js"></script>-->
 
 
 
