新增 variable切换显示

--- a/app/main.html
+++ b/app/main.html
@@ -92,7 +92,7 @@
                             <img class="mdui-card-header-avatar" src="http://i1.piimg.com/567571/3090cb99d10f235c.png" />
                             <div class="mdui-card-header-title">工作区域</div>
                             <div class="mdui-card-header-subtitle">work space</div>
-                            <div class="mdui-tab mdui-float-right" mdui-tab id="tab" style="position: absolute;right: 0;top: 8px;">
+                            <div class="mdui-tab mdui-float-right" mdui-tab id="top-tab" style="position: absolute;right: 0;top: 8px;">
                                 <a href="#tab1-content" id="tab1" class="mdui-ripple">Table Edit</a>
                                 <a href="#tab2-content" id="tab2" class="mdui-ripple">Text Edit</a>
                                 <a href="#tab3-content" id="tab3" class="mdui-ripple">Run</a>
@@ -120,7 +120,7 @@
 
                                     </div>
 
-                                    <div class="mdui-tab " mdui-tab id="tab">
+                                    <div class="mdui-tab " mdui-tab id="bottom-tab">
                                         <a href="#tab4-content" id="tab4" class="mdui-ripple">Table Edit</a>
                                         <a href="#tab5-content" id="tab5" class="mdui-ripple">Settings</a>
                                         <a href="#tab6-content" id="tab6" class="mdui-ripple">Variables</a>
