--- a/app/main.html
+++ b/app/main.html
@@ -93,9 +93,9 @@
                             <div class="mdui-card-header-title">工作区域</div>
                             <div class="mdui-card-header-subtitle">work space</div>
                             <div class="mdui-tab mdui-float-right" mdui-tab id="top-tab" style="position: absolute;right: 0;top: 8px;">
-                                <a href="#tab1-content" id="tab1" class="mdui-ripple">Table Edit</a>
-                                <a href="#tab2-content" id="tab2" class="mdui-ripple">Text Edit</a>
-                                <a href="#tab3-content" id="tab3" class="mdui-ripple">Run</a>
+                                <a href="#top-tab-table-edit-content" id="top-tab-table-edit" class="mdui-ripple">Table Edit</a>
+                                <a href="#top-tab-text-edit-content" id="top-tab-text-edit" class="mdui-ripple">Text Edit</a>
+                                <a href="#top-tab-run-content" id="top-tab-run" class="mdui-ripple">Run</a>
                             </div>
                         </div>
                         <div class="mdui-divider"></div>
@@ -106,30 +106,30 @@
 
                             <div class="mdui-col-xs-12">
 
-                                <div id="tab1-content" class="mdui-p-a-2" style="border: solid 0px red;">
+                                <div id="top-tab-table-edit-content" class="mdui-p-a-2" style="border: solid 0px red;">
 
-                                    <div id="tab4-content" class="mdui-p-a-0" style="overflow: hidden;">
+                                    <div id="bottom-tab-table-edit-content" class="mdui-p-a-0" style="overflow: hidden;">
                                         <div id="example"></div>
                                     </div>
-                                    <div id="tab5-content" class="mdui-p-a-0" style="overflow: hidden;">
+                                    <div id="bottom-tab-settings-content" class="mdui-p-a-0" style="overflow: hidden;">
                                         <div id="suite_settings_table" ></div>
 
                                     </div>
-                                    <div id="tab6-content" class="mdui-p-a-0 mdui-drawer-scrollbar" style="overflow: hidden;">
+                                    <div id="bottom-tab-variables-content" class="mdui-p-a-0 mdui-drawer-scrollbar" style="overflow: hidden;">
                                         <div id="suite_variable_table"></div>
 
                                     </div>
 
                                     <div class="mdui-tab " mdui-tab id="bottom-tab">
-                                        <a href="#tab4-content" id="tab4" class="mdui-ripple">Table Edit</a>
-                                        <a href="#tab5-content" id="tab5" class="mdui-ripple">Settings</a>
-                                        <a href="#tab6-content" id="tab6" class="mdui-ripple">Variables</a>
+                                        <a href="#bottom-tab-table-edit-content" id="bottom-tab-table-edit" class="mdui-ripple">Table Edit</a>
+                                        <a href="#bottom-tab-settings-content" id="bottom-tab-settings" class="mdui-ripple">Settings</a>
+                                        <a href="#bottom-tab-variables-content" id="bottom-tab-variables" class="mdui-ripple">Variables</a>
                                     </div>
 
 
                                 </div>
-                                <div id="tab2-content" class="mdui-p-a-0" style="border: solid 1px red;">shopping content</div>
-                                <div id="tab3-content" class="mdui-p-a-0">
+                                <div id="top-tab-text-edit-content" class="mdui-p-a-0" style="border: solid 1px red;">shopping content</div>
+                                <div id="top-tab-run-content" class="mdui-p-a-0">
                                     <div class='frameset' style="border: solid 1px red;" rows="50%,*">
                                         <div>
                                             <p> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
