优化 table hot的命名

--- a/app/main.html
+++ b/app/main.html
@@ -112,11 +112,11 @@
                                         <div id="example"></div>
                                     </div>
                                     <div id="bottom-tab-settings-content" class="mdui-p-a-0" style="overflow: hidden;">
-                                        <div id="suite_settings_table" ></div>
+                                        <div id="settings_table" ></div>
 
                                     </div>
                                     <div id="bottom-tab-variables-content" class="mdui-p-a-0 mdui-drawer-scrollbar" style="overflow: hidden;">
-                                        <div id="suite_variable_table"></div>
+                                        <div id="variable_table"></div>
 
                                     </div>
 
@@ -303,11 +303,9 @@
 
     <!--引入表格-->
     <script type="text/javascript" src="plugin/handsontable/handsontable.full.js"></script>
-    <script type="text/javascript" src="assets/js/table.js"></script>
-    <script type="text/javascript" src="assets/js/suite_settings_table.js"></script>
-    <!--<script type="text/javascript" src="assets/js/suite_library_table.js"></script>-->
-    <script type="text/javascript" src="assets/js/suite_variable_table.js"></script>
-    <!--<script type="text/javascript" src="assets/js/suite_metadata_table.js"></script>-->
+    <script type="text/javascript" src="assets/js/edit_table.js"></script>
+    <script type="text/javascript" src="assets/js/settings_table.js"></script>
+    <script type="text/javascript" src="assets/js/variable_table.js"></script>
 
 
 
