新增 拼接选中的suite和case

--- a/app/main.html
+++ b/app/main.html
@@ -33,7 +33,7 @@
                 <span class="mdui-typo-title">RFEditor</span>
                 <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag" onclick="openDirectory()"><i class="mdui-icon material-icons">folder_open</i></a>
                 <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag"><i class="mdui-icon material-icons">save</i></a>
-                <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag"><i class="mdui-icon material-icons">play_circle_outline</i></a>
+                <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag" onclick="runTest()"><i class="mdui-icon material-icons">play_circle_outline</i></a>
                 <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag"><i class="mdui-icon material-icons">remove_circle_outline</i></a>
                 <div class="mdui-toolbar-spacer"></div>
                 <a href="javascript:;" class="mdui-btn mdui-btn-icon no-drag"><i class="mdui-icon material-icons">remove</i></a>
@@ -317,6 +317,9 @@
 
     <script type="text/javascript" src="assets/js/worktree.js"></script>
     <script type="text/javascript" src="assets/js/toolbar.js"></script>
+
+
+    <script type="text/javascript" src="assets/js/run.js"></script>
 
 
 </body>
