新增 显示项目目录

--- a/app/main.html
+++ b/app/main.html
@@ -54,7 +54,7 @@
                         <div class="mdui-card-header">
                             <img class="mdui-card-header-avatar" src="http://i4.buimg.com/567571/2523c19c61d28eb1.png" />
                             <div class="mdui-card-header-title">项目目录</div>
-                            <div class="mdui-card-header-subtitle">D:/dddf/dfdf/dfd/豆腐干大概/sss.d</div>
+                            <div class="mdui-card-header-subtitle" id="workspace_dir">D:/dddf/dfdf/dfd/豆腐干大概/sss.d</div>
                         </div>
                         <div class="mdui-divider"></div>
 
