新增 显示工作区域的文件地址

--- a/app/main.html
+++ b/app/main.html
@@ -54,7 +54,7 @@
                         <div class="mdui-card-header">
                             <img class="mdui-card-header-avatar" src="http://i4.buimg.com/567571/2523c19c61d28eb1.png" />
                             <div class="mdui-card-header-title">项目目录</div>
-                            <div class="mdui-card-header-subtitle" id="workspace_dir">D:/dddf/dfdf/dfd/豆腐干大概/sss.d</div>
+                            <div class="mdui-card-header-subtitle" id="workspace_dir"></div>
                         </div>
                         <div class="mdui-divider"></div>
 
@@ -91,7 +91,7 @@
                         <div class="mdui-card-header">
                             <img class="mdui-card-header-avatar" src="http://i1.piimg.com/567571/3090cb99d10f235c.png" />
                             <div class="mdui-card-header-title">工作区域</div>
-                            <div class="mdui-card-header-subtitle">work space</div>
+                            <div class="mdui-card-header-subtitle" id="workspace_sub_dir"></div>
                             <div class="mdui-tab mdui-float-right" mdui-tab id="top-tab" style="position: absolute;right: 0;top: 8px;">
                                 <a href="#top-tab-table-edit-content" id="top-tab-table-edit" class="mdui-ripple">Table Edit</a>
                                 <a href="#top-tab-text-edit-content" id="top-tab-text-edit" class="mdui-ripple">Text Edit</a>
