--- a/app/main.html
+++ b/app/main.html
@@ -131,7 +131,7 @@
                                 <div id="top-tab-text-edit-content" class="mdui-p-a-0" style="border: solid 1px red;">shopping content</div>
                                 <div id="top-tab-run-content" class="mdui-p-a-0">
                                     <div class='frameset' style="border: solid 1px red;" rows="50%,*">
-                                        <div>
+                                        <div id="console_log">
                                             <p> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
                                                 tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
                                                 At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
@@ -140,7 +140,7 @@
                                                 tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
                                                 At vero eos et accusam et justo. </p>
                                         </div>
-                                        <div>
+                                        <div id="running_log">
                                             <p> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
                                                 tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
                                                 At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
