新增 日志实时输出

--- a/app/main.html
+++ b/app/main.html
@@ -9,7 +9,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <title>RFEditor</title>
-    <link rel="stylesheet" href="assets/css/mdui.min.css?v=f8d5474f78cc30e0322af9d29242f241" />
+    <link rel="stylesheet" href="assets/css/mdui.css?v=f8d5474f78cc30e0322af9d29242f241" />
 
     <link rel="stylesheet" href="plugin/ztree/css/coloRideStyle/coloRideStyle.css" type="text/css">
     <link rel="stylesheet" href="assets/css/rfeditor.css" type="text/css">
